Envio compilado modulo 3

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 31
 
     defaultConfig {
-        applicationId "com.augusto.myapplication"
-        minSdk 29
-        targetSdk 32
+        applicationId "com.tesis.quizti3"
+        minSdk 21
+        targetSdk 31
         versionCode 1
         versionName "1.0"
 
