--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.augusto.myapplication">
+    package="com.tesis.quizti3">
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
-            android:supportsRtl="true"
-            android:theme="@style/Theme.MyApplication">
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.QuizTI3">
         <activity
-                android:name=".MainActivity2"
-                android:exported="false" />
+            android:name=".Home"
+            android:exported="false" />
         <activity
-                android:name=".MainActivity"
-                android:exported="true">
+            android:name=".FormPerguntaAluno"
+            android:exported="false" />
+        <activity
+            android:name=".ListaQuizAluno"
+            android:exported="false" />
+        <activity
+            android:name=".ListaPerguntasQuiz"
+            android:exported="false" />
+        <activity
+            android:name=".ListaAlunoQuiz"
+            android:exported="false" />
+        <activity
+            android:name=".ListaQuiz"
+            android:exported="false" />
+        <activity
+            android:name=".FormPergunta"
+            android:exported="false" />
+        <activity
+            android:name=".FormQuiz"
+            android:exported="false" />
+        <activity
+            android:name=".FormCadastro"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FormLogin"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
